# COMP438_lab

ARAP/: CMakeLists.txt  main.cpp
Bezier/: CMakeLists.txt  Cp.txt  main.cpp  tri_patch.txt  triangular_bezier.cpp
Bezier/src/: bezier.cpp  bezier.h
Laplacian/: CMakeLists.txt  main.cpp
Subdivision/: main.cpp
marching_tet/: CMakeLists.txt  main.cpp
